[tool.poetry]
name = "backlog-webhook-sdk"
version = "0.1.0"
description = ""
authors = ["Hirofumi Tsuzuki <hrfm.tsuzuki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.9.1"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"

[tool.black]
line-length = 80

[tool.isort]
include_trailing_comma = true
line_length = 80
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
